# composipy

./: pyproject.toml  setup.py
composipy/: __init__.py
composipy/nastranapi/: pcomp_generator.py
examples/: example_abd.py  example_coupling.py  example_nastran.py
tests/: test_abd_example.py  test_examples.py  test_pcomp.py
