[project]
name = "composipy"
version = "1.5.2rc1"
description = "This package intends to perform composite material calculations"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Rafael Pereira", email = "rafaelpsilva07@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "rich",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--cov=composipy"

#[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
#version_scheme = "no-guess-dev"
